--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 	<div class="advantages">
 		<div class="container">
-			<div class="header_repeat">НАШИ ПРЕИМУЩЕСТВА</div>
+			<h2 class="header_repeat">НАШИ ПРЕИМУЩЕСТВА</h2>
 			<div class="advantages__wrapper">
 				<div class="advantages__item">
 					<img src="icons/advantages_1.png" alt="expirience">
@@ -80,6 +80,22 @@
 						правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a></div>
 				</div>
 			</div>
+		</div>
+	</div>
+
+	<div class="consultation">
+		<div class="container">
+			<h2 class="header_repeat header_repeat_left">Получите бесплатную консультацию <br>
+			по подбору пульсометра</h2>
+			<div class="consultation__descr">Просто заполните форму заявки <br> 
+			и мы перезвоним вам в течении 10 минут</div>
+			<form class="feed-form" action="#" method="POST">
+				<input name="name" required placeholder="Ваше имя" type="text">
+				<input name="phone" required placeholder="Ваш телефон" type="number">
+				<input name="email" required placeholder="Ваш E-mail" type="email">
+
+				<button class="button button_submit">Заказать консультацию</button>
+			</form>
 		</div>
 	</div>
 </body>
