Add script for tabs in .catalog

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<li class="catalog__tab"><div>для триатлона</div></li>
 			</ul>
 
-			<div class="catalog__content">
+			<div class="catalog__content catalog__content_active">
 
 				<div class="catalog-item">
 
@@ -311,7 +311,7 @@
 				</div>
 				
 			</div>
-			<div class="catalog__content"></div>
+			<div class="catalog__content">
 
 				<div class="catalog-item">
 
@@ -344,6 +344,7 @@
 						<button class="button button_mini">КУПИТЬ</button>
 					</div>
 				</div>
+			</div>	
 
 			<div class="catalog__content">
 
@@ -409,12 +410,13 @@
 						<button class="button button_mini">КУПИТЬ</button>
 					</div>
 				</div>
-				
+
 			</div>
 		</div>
 	</section>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="js/script.js"></script>
 
 </body>
