--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
 
 						<div class="catalog-item__content catalog-item__content_active">
 							<img src="img/catalog.jpg" alt="pulsometr" class="catalog-item__img">
-							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
-							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+							<div class="catalog-item__subtitle">Пульсометр Suunto M2</div>
+							<div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
 
@@ -179,8 +179,39 @@
 
 					<div class="catalog-item__footer">
 						<div class="catalog-item__prises">
-							<div class="catalog-item__old-price">4 750 руб.</div>
-							<div class="catalog-item__price">4 500 руб.</div>
+							<div class="catalog-item__old-price">6 990 руб.</div>
+							<div class="catalog-item__price">6 641 руб.</div>
+						</div>
+						<button class="button button_mini">КУПИТЬ</button>
+					</div>
+				</div>
+				<div class="catalog-item">
+
+					<div class="catalog-item__wrapper">
+
+						<div class="catalog-item__content catalog-item__content_active">
+							<img src="img/catalog.jpg" alt="pulsometr" class="catalog-item__img">
+							<div class="catalog-item__subtitle">Пульсометр Polar FT4</div>
+							<div class="catalog-item__descr">Улучшенная версия Polar FT1, имеющая следующие улучшения:</div>
+							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+						</div>
+
+						<ul class="catalog-item__list">
+							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+							<a href="#" class="catalog-item__back">назад</a>
+						</ul>
+
+					</div>
+
+					<hr>
+
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prises">
+							<div class="catalog-item__old-price">7 390 руб.</div>
+							<div class="catalog-item__price">7 021 руб.</div>
 						</div>
 						<button class="button button_mini">КУПИТЬ</button>
 					</div>
@@ -222,8 +253,8 @@
 
 						<div class="catalog-item__content catalog-item__content_active">
 							<img src="img/catalog.jpg" alt="pulsometr" class="catalog-item__img">
-							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
-							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+							<div class="catalog-item__subtitle">Пульсометр Suunto M2</div>
+							<div class="catalog-item__descr">Пульсометр начального уровня с комфортным тканевым ремешком</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
 
@@ -241,8 +272,8 @@
 
 					<div class="catalog-item__footer">
 						<div class="catalog-item__prises">
-							<div class="catalog-item__old-price">4 750 руб.</div>
-							<div class="catalog-item__price">4 500 руб.</div>
+							<div class="catalog-item__old-price">6 990 руб.</div>
+							<div class="catalog-item__price">6 641 руб.</div>
 						</div>
 						<button class="button button_mini">КУПИТЬ</button>
 					</div>
@@ -253,8 +284,8 @@
 
 						<div class="catalog-item__content catalog-item__content_active">
 							<img src="img/catalog.jpg" alt="pulsometr" class="catalog-item__img">
-							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
-							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+							<div class="catalog-item__subtitle">Пульсометр Polar FT4</div>
+							<div class="catalog-item__descr">Улучшенная версия Polar FT1, имеющая следующие улучшения:</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
 
@@ -272,39 +303,8 @@
 
 					<div class="catalog-item__footer">
 						<div class="catalog-item__prises">
-							<div class="catalog-item__old-price">4 750 руб.</div>
-							<div class="catalog-item__price">4 500 руб.</div>
-						</div>
-						<button class="button button_mini">КУПИТЬ</button>
-					</div>
-				</div>
-				<div class="catalog-item">
-
-					<div class="catalog-item__wrapper">
-
-						<div class="catalog-item__content catalog-item__content_active">
-							<img src="img/catalog.jpg" alt="pulsometr" class="catalog-item__img">
-							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
-							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
-							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
-						</div>
-
-						<ul class="catalog-item__list">
-							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>
-							<a href="#" class="catalog-item__back">назад</a>
-						</ul>
-
-					</div>
-
-					<hr>
-
-					<div class="catalog-item__footer">
-						<div class="catalog-item__prises">
-							<div class="catalog-item__old-price">4 750 руб.</div>
-							<div class="catalog-item__price">4 500 руб.</div>
+							<div class="catalog-item__old-price">7 390 руб.</div>
+							<div class="catalog-item__price">7 021 руб.</div>
 						</div>
 						<button class="button button_mini">КУПИТЬ</button>
 					</div>
@@ -385,8 +385,8 @@
 
 						<div class="catalog-item__content catalog-item__content_active">
 							<img src="img/catalog.jpg" alt="pulsometr" class="catalog-item__img">
-							<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
-							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+							<div class="catalog-item__subtitle">Пульсометр Polar FT4</div>
+							<div class="catalog-item__descr">Улучшенная версия Polar FT1, имеющая следующие улучшения:</div>
 							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
 						</div>
 
@@ -404,8 +404,8 @@
 
 					<div class="catalog-item__footer">
 						<div class="catalog-item__prises">
-							<div class="catalog-item__old-price">4 750 руб.</div>
-							<div class="catalog-item__price">4 500 руб.</div>
+							<div class="catalog-item__old-price">7 390 руб.</div>
+							<div class="catalog-item__price">7 021 руб.</div>
 						</div>
 						<button class="button button_mini">КУПИТЬ</button>
 					</div>
