Add @media for .carousel, tiny slider (js)

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
 		</div>
 	</section>
 
+
+
+
+
+
 	<section class="consultation">
 		<div class="container">
 			<h2 class="header_repeat header_repeat_left">Получите бесплатную консультацию <br>
@@ -100,6 +105,13 @@
 		</div>
 	</section>
 
+
+
+
+
+
+
+
 	<section class="carousel">
 		<div class="container">
 			<div class="carousel__inner">
@@ -107,11 +119,18 @@
 				<div><img src="img/carousel_2.jpg" alt="slide_2"></div>
 				<div><img src="img/carousel_3.jpg" alt="slide_3"></div>
 			</div>
-			<button type="button" class="prev"><img src="../icons/arrow_left.png"></img></button>
-			<button type="button" class="next"><img src="../icons/arrow_right.png"></img></button>
+			<button type="button" class="prev"><img src="/icons/arrow_left.png"></img></button>
+			<button type="button" class="next"><img src="/icons/arrow_right.png"></img></button>
 		</div>
 	</section>
 	
+
+
+
+
+
+
+
 	<section class="catalog">
 		<div class="container">
 			<h2 class="header_repeat">Каталог пульсометров</h2>
