--- a/index.html
+++ b/index.html
@@ -434,6 +434,46 @@
 		</div>
 	</section>
 
+	<section class="review">
+		<div class="container">
+			<h2 class="header_repeat">отзывы клиентов</h2>
+			<div class="review__wrapper review__wrapper__margin">
+				<img src="img/review_1.png" alt="review_Irina" class="review__photo">
+				<div class="review__items">
+					<h2 class="review__header">Ирина Иванченко</h2>
+					<div class="review__subheader">2 полумарафона</div>
+					<div class="review__descr">
+					Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.
+					Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же. <br><br>
+					Новые цели - новый гаджет!<br><br>
+					Спасибо, RunSmart!
+					</div>
+				</div>
+			</div>
+			<div class="review__wrapper">
+				<img src="img/review_2.png" alt="review_Ivan" class="review__photo">
+				<div class="review__items">
+					<h2 class="review__header">Иван Сёмочкин</h2>
+					<div class="review__subheader">1 полумарафон</div>
+					<div class="review__descr">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд. <br><br>
+					С ними подготовился к своему первому полумарафону! Спасибо!!!</div>
+				</div>
+			</div>
+			<div class="review__wrapper">
+				<img src="img/review_3.png" alt="review_Julia" class="review__photo">
+				<div class="review__items">
+					<h2 class="review__header">Юлия Дашкина</h2>
+					<div class="review__subheader">2 полумарафона</div>
+					<div class="review__descr">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать. <br><br>
+					Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться! <br><br>
+					Спасибо!!!</div>
+				</div>
+			</div>
+		</div>
+	
+	</section>
+
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="js/script.js"></script>
