--- a/index.html
+++ b/index.html
@@ -434,6 +434,13 @@
 		</div>
 	</section>
 
+
+
+
+
+
+
+
 	<section class="review">
 		<div class="container">
 			<h2 class="header_repeat">отзывы клиентов</h2>
@@ -472,6 +479,36 @@
 		</div>
 	
 	</section>
+
+
+
+
+
+
+
+	<footer class="footer">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.310778464831!2d37.64560124995753!3d55.77047411844476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDEwNzA3OA!5e0!3m2!1sru!2sua!4v1617108730202!5m2!1sru!2sua" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+		<div class="footer__info">
+			<address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
+			<a class="footer__phone" href="tel:84999228974">8 (499) 922-89-74</a>
+			<div class="footer__social">
+				<a href="#" class="footer__social-item">
+					<img src="icons/social/facebook.png" alt="facebook">
+				</a>
+				<a href="#" class="footer__social-item">
+					<img src="icons/social/instagram.png" alt="instagram">
+				</a>
+				<a href="#" class="footer__social-item">
+					<img src="icons/social/pinterest.png" alt="pinterest">
+				</a>
+			</div>
+		</div>
+	</footer>
+
+
+
+
+
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
