--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 	<section class="review">
 		<div class="container">
 			<h2 class="header_repeat">отзывы клиентов</h2>
-			<div class="review__wrapper review__wrapper__margin">
+			<div class="review__wrapper review__wrapper_mt70">
 				<img src="img/review_1.png" alt="review_Irina" class="review__photo">
 				<div class="review__items">
 					<h2 class="review__header">Ирина Иванченко</h2>
@@ -506,9 +506,42 @@
 	</footer>
 
 
+	
+	<div class="overlay"> <!-- тёмная обертка, на которой будут появляться модальные окна -->
+		<div class="modal" id="consultation"> <!-- будет повторяться 3 раза, id для скриптов -->
+			<div class="modal__close">&times;</div> <!-- спецсимвол в виде крестика, работает как шрифт -->
+			<div class="modal__subtitle">Просто заполните форму заявки</div>
+			<div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
+			<form class="feed-form feed-form_mt25" action="#" method="POST"> <!-- форма, которую использовали выше  -->
+				<input name="name" required placeholder="Ваше имя" type="text">
+				<input name="phone" required placeholder="Ваш телефон" type="number">
+				<input name="email" required placeholder="Ваш E-mail" type="email">
+
+				<button class="button button_submit">Заказать консультацию</button>
+			</form>
+		</div>
+	
+
+		<div class="modal" id="order"> <!-- будет повторяться 3 раза, id для скриптов -->
+			<div class="modal__close">&times;</div> <!-- спецсимвол в виде крестика, работает как шрифт -->
+			<div class="modal__subtitle">Ваш заказ:</div>
+			<div class="modal__descr">Пульсометр Polar FT1</div>
+			<form class="feed-form feed-form_mt25" action="#" method="POST"> <!-- форма, которую использовали выше  -->
+				<input name="name" required placeholder="Ваше имя" type="text">
+				<input name="phone" required placeholder="Ваш телефон" type="number">
+				<input name="email" required placeholder="Ваш E-mail" type="email">
+
+				<button class="button button_submit">Купить</button>
+			</form>
+		</div>
 
 
-
+		<div class="modal modal_mini" id="thanks"> <!-- будет повторяться 3 раза, id для скриптов -->
+			<div class="modal__close">&times;</div> <!-- спецсимвол в виде крестика, работает как шрифт -->
+			<div class="modal__subtitle">Спасибо за вашу заявку!</div>
+			<div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
+		</div>
+	</div>
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
