--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				</div>
 				<div class="header__contacts">
 					<a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-					<button class="button">заказать звонок</button>
+					<button data-modal="consultation" class="button">заказать звонок</button> <!-- data-modal для того, чтобы открывалось модальное окно при нажатии -->
 				</div>
 			</header>
 			
@@ -49,7 +49,7 @@
 						на все вопросы
 					</div>
 				</div>
-				<button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+				<button data-modal="consultation" class="button button_main">заказать кОНСУЛЬТАЦИЮ</button> <!-- data-modal для того, чтобы открывалось модальное окно при нажатии -->
 				<div class="promo__link">
 					или <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
 				</div>
