--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			по подбору пульсометра</h2>
 			<div class="consultation__descr">Просто заполните форму заявки <br> 
 			и мы перезвоним вам в течении 10 минут</div>
-			<form class="feed-form" action="#" method="POST">
+			<form id="consultation-form" class="feed-form" action="#" method="POST">
 				<input name="name" required placeholder="Ваше имя" type="text">
 				<input name="phone" required placeholder="Ваш телефон" type="number">
 				<input name="email" required placeholder="Ваш E-mail" type="email">
@@ -513,9 +513,9 @@
 			<div class="modal__subtitle">Просто заполните форму заявки</div>
 			<div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
 			<form class="feed-form feed-form_mt25" action="#" method="POST"> <!-- форма, которую использовали выше  -->
-				<input name="name" required placeholder="Ваше имя" type="text">
-				<input name="phone" required placeholder="Ваш телефон" type="number">
-				<input name="email" required placeholder="Ваш E-mail" type="email">
+				<input name="name" placeholder="Ваше имя" type="text">
+				<input name="phone" placeholder="Ваш телефон" type="number">
+				<input name="email" placeholder="Ваш E-mail" type="email">
 
 				<button class="button button_submit">Заказать консультацию</button>
 			</form>
@@ -546,6 +546,7 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="js/jquery.validate.min.js"></script>
 	<script src="js/script.js"></script>
 
 </body>
