--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<section class="promo">
+	<section id="up" class="promo">
 		<div class="container">
 			<header class="header"> <!-- по БЭМу каждый тег должен быть с классом -->
 				<a href="#" class="header__logo">
@@ -543,6 +543,7 @@
 		</div>
 	</div>
 
+	<a href="#up" class="pageup"><img src="icons/up.svg" alt="up"></a>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
