--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="icons/favicon.ico" type="image/x-icon">
 	<title>Pulsometr</title>
-	<link rel="stylesheet" href="css/bootstrap-reboot.min.css"> <!-- подключаем вместо normalize.css -->
-	<link rel="stylesheet" href="css/fonts.css"> <!-- подключаем шрифты -->
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -463,7 +460,7 @@
 	<section class="review">
 		<div class="container">
 			<h2 class="header_repeat">отзывы клиентов</h2>
-			<div class="review__wrapper review__wrapper_mt70 animate__animated animate__fadeInUp wow" data-wow-duration="2s" data-wow-delay="1s">
+			<div class="review__wrapper review__wrapper_mt70 animate__animated animate__fadeInUp wow" data-wow-duration="2s" data-wow-delay="0.1s">
 				<img src="img/review_1.png" alt="review_Irina" class="review__photo">
 				<div class="review__items">
 					<h2 class="review__header">Ирина Иванченко</h2>
@@ -476,7 +473,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="review__wrapper animate__animated animate__fadeInUp wow" data-wow-duration="2s" data-wow-delay="1s">
+			<div class="review__wrapper animate__animated animate__fadeInUp wow" data-wow-duration="2s" data-wow-delay="0.1s">
 				<img src="img/review_2.png" alt="review_Ivan" class="review__photo">
 				<div class="review__items">
 					<h2 class="review__header">Иван Сёмочкин</h2>
@@ -485,7 +482,7 @@
 					С ними подготовился к своему первому полумарафону! Спасибо!!!</div>
 				</div>
 			</div>
-			<div class="review__wrapper animate__animated animate__fadeInUp wow" data-wow-duration="2s" data-wow-delay="1s">
+			<div class="review__wrapper animate__animated animate__fadeInUp wow" data-wow-duration="2s" data-wow-delay="0.1s">
 				<img src="img/review_3.png" alt="review_Julia" class="review__photo">
 				<div class="review__items">
 					<h2 class="review__header">Юлия Дашкина</h2>
@@ -564,10 +561,10 @@
 
 	<a href="#up" class="pageup"><img src="icons/up.svg" alt="up"></a>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.validate.min.js"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
+	<script src="js/tiny-slider.min.js"></script>
 	<script src="js/wow.min.js"></script>
 	<script src="js/script.js"></script>
 
